add_executable(gaussian_estimation
    gaussian_estimation.cpp
    VertexBias.cpp
    NoisyMeasurementEdge.cpp
)

target_link_libraries(gaussian_estimation
    glog
    ${EIGEN3_LIBS}
    g2o_core
    g2o_solver_eigen
    g2o_solver_dense
    g2o_types_sba
    g2o_types_sim3
    g2o_types_slam2d
    g2o_types_slam2d_addons
    g2o_types_slam3d
    g2o_types_slam3d_addons
    g2o_stuff
    g2o_solver_cholmod
)